fix front on pageList

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -114,10 +114,6 @@ a, a:visited {
   }
 }
 
-.card-body {
-  font-size: 0,75%;
-}
-
 p {
   text-align: justify;
 }
@@ -132,4 +128,23 @@ p {
 .jumbotron {
   height: 40vh;
   background-size: cover;
+}
+
+.card {
+  h1 {
+    font-size: 300%;
+    font-weight: bold;
+    font-variant: small-caps;
+    color: white;
+  }
+
+  h3 {
+    color: $red;
+    font-weight: bold;
+  }
+}
+
+.footer-line {
+  width: 20vw;
+  border-top: solid 5px $red;
 }
